--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </li>
         </ul>
       </nav>
-      <h3i id="header"> <a href="/">Icebreakers</a></h3>
+      <h3 id="header"> <a href="/">Icebreakers</a></h3>
     </header>
     <main>
       <div class="jumbotron">
